started building out the banner

--- a/index.html
+++ b/index.html
@@ -9,26 +9,36 @@
 </head>
 <body>
 
+<!-- Begin Main Navigation -->
 <nav class="main-nav">
   <ul class="menu">
     <div class="main-nav-left">
-      <li><a href="index.html"><img class="cu-logo-menu" src="img/consolidated-logo-1-1.png" alt="Consolidated Utilities Logo"></a></li>
+      <li><a href="index.html"><img class="cu-logo-menu" src="img/consolidated-logo-1.png" alt="Consolidated Utilities Logo"></a></li>
     </div>
     <div class="main-nav-middle">
-      <li class="nav-item"><a href="policies.html">Policies</a></li>
-      <li class="nav-item"><a href="about-us.html">About Us</a></li>
-      <li class="nav-item"><a href="billing.html">Billing</a></li>
+      <li class="nav-item"><a href="#">Policies</a></li>
+      <li class="nav-item"><a href="#">About Us</a></li>
+      <li class="nav-item"><a href="#">Billing</a></li>
       <li class="nav-item"><a href="#">Areas We Serve</a></li>
-      <li class="nav-item"><a href="contact-us.html">Rates</a></li>
-      <li class="nav-item"><a href="contact-us.html">News</a></li>
-      <li class="nav-item"><a href="contact-us.html">Conservation Efforts</a></li>
+      <li class="nav-item"><a href="#">Rates</a></li>
+      <li class="nav-item"><a href="#">News</a></li>
+      <li class="nav-item"><a href="#">Meter Tap in Fees</a></li>
+      <li class="nav-item"><a href="#">Conservation Efforts</a></li>
     </div>
     <div class="main-nav-right">
-      <li class="nav-item-last"><a class="btn-blue" href="contact-us.html">Contact</a></li>
+      <li class="nav-item-last"><a class="btn-blue" href="#">Contact</a></li>
     </div>
-
   </ul>
 </nav>
+<!-- End Main Naviation -->
+
+<!-- Begin Slider -->
+<section class="slider">
+  <h1 class="slider-heading">2023 Consumer Confidence Reports</h1>
+  <p class="slider-text">
+    2023 Consumer Confidence Reports have been released and are available.
+  </p>
+</section>
 
 </body>
 </html>
