continued building out designs

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/consoligrid.css">
   <title>Consolidated Utilities</title>
@@ -34,9 +37,10 @@
 
 <!-- Begin Slider -->
 <section class="slider">
-  <h1 class="slider-heading">2023 Consumer Confidence Reports</h1>
-  <p class="slider-text">
-    2023 Consumer Confidence Reports have been released and are available.
+  <h1 class="slider-heading montserrat-bold">2023 Consumer Confidence Reports</h1>
+  <p class="slider-paragraph">
+    2023 Consumer Confidence Reports have been released and are available. These can be viewed on the News page. Or, you
+    can click on the link below.
   </p>
 </section>
 
