continued building out site

--- a/index.html
+++ b/index.html
@@ -36,13 +36,48 @@
 <!-- End Main Naviation -->
 
 <!-- Begin Slider -->
-<section class="slider">
-  <h1 class="slider-heading montserrat-bold">2023 Consumer Confidence Reports</h1>
-  <p class="slider-paragraph">
-    2023 Consumer Confidence Reports have been released and are available. These can be viewed on the News page. Or, you
-    can click on the link below.
-  </p>
+<section class="slider-container">
+  <div class="slider-item">
+    <h1 class="slider-heading montserrat-bold">2023 Consumer Confidence Reports</h1>
+    <p class="slider-paragraph">
+      2023 Consumer Confidence Reports have been released and are available. These can be viewed on the News page. Or, you
+      can click on the link below.
+    </p>
+
+    <div class="slider-link-wrapper">
+      <a class="btn-blue" href="#">Read the Reports</a>
+    </div>
+  </div>
 </section>
+<!-- End Slider -->
+
+<!-- Online Bill Pay Call To Action -->
+<section class="billing-container">
+  <img class="cu-logo-phone" src="img/consolidated-logo-on-devices.png" alt="Consolidated Utilities Logo on Phone and Laptop">
+  <div class="online-bill-pay-munibilling">
+    <h1>Online Bill Pay</h1>
+    <p class="margin-bottom-30-px">
+      By logging into your Munibilling Account, you can view your usage and pay your bill.
+    </p>
+    <a class="btn-blue" href="#">Pay Your Bill</a>
+  </div>
+</section>
+<!-- End Online Bill Pay Call To Action -->
+
+<!-- Main -->
+<main class="home-page-main-container">
+  <h1>Welcome to Consolidated Utilities</h1>
+  <p>
+    Welcome to the homepage of Consolidated Utilities, Inc., Coastal Water & Sewage Company, LLC., Coastal Water Company,
+    Whitemarsh Estates Water System, Woodlawn Water System and Golden Isles Water System. These systems are referred
+    to collectively as Consolidated.
+  </p>
+  <p>
+    Consolidated is a water sewage utility headquartered in Savannah, GA. This webpage contains our water/sewage rates,
+    online bill pay, company policies, contact information, directions, and our conservation efforts.
+  </p>
+</main>
+<!-- End Main -->
 
 </body>
 </html>
