--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- Begin Slider -->
 <section class="slider-container">
   <div class="slider-item">
-    <h1 class="slider-heading montserrat-bold">2023 Consumer Confidence Reports</h1>
+    <h1 class="slider-heading">2023 Consumer Confidence Reports</h1>
     <p class="slider-paragraph">
       2023 Consumer Confidence Reports have been released and are available. These can be viewed on the News page. Or, you
       can click on the link below.
@@ -78,6 +78,11 @@
   </p>
 </main>
 <!-- End Main -->
+
+<!-- FAQ -->
+<section class="faq-container">
+  <h1 class="faq-h1">Frequently Asked Questions</h1>
+</section>
 
 </body>
 </html>
