--- a/index.html
+++ b/index.html
@@ -37,16 +37,35 @@
 
 <!-- Begin Slider -->
 <section class="slider-container">
-  <div class="slider-item">
-    <h1 class="slider-heading">2023 Consumer Confidence Reports</h1>
-    <p class="slider-paragraph">
-      2023 Consumer Confidence Reports have been released and are available. These can be viewed on the News page. Or, you
-      can click on the link below.
-    </p>
+  <div class="slider">
+    <div class="slider-item slide">
+      <h1 class="slider-heading">2023 Consumer Confidence Reports</h1>
+      <p class="slider-paragraph">
+        2023 Consumer Confidence Reports have been released and are available. These can be viewed on the News page. Or, you
+        can click on the link below.
+      </p>
 
-    <div class="slider-link-wrapper">
-      <a class="btn-blue" href="#">Read the Reports</a>
+      <div class="slider-link-wrapper">
+        <a class="btn-blue" href="#">Read the Reports</a>
+      </div>
     </div>
+
+    <div class="slider-item slide">
+      <h1 class="slider-heading">2024 Consumer Confidence Reports</h1>
+      <p class="slider-paragraph">
+        2024 Consumer Confidence Reports have been released and are available. These can be viewed on the News page. Or, you
+        can click on the link below.
+      </p>
+
+      <div class="slider-link-wrapper">
+        <a class="btn-blue" href="#">Read the Reports</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="dots">
+    <span class="dot" data-slide="0"></span>
+    <span class="dot" data-slide="1"></span>
   </div>
 </section>
 <!-- End Slider -->
@@ -84,5 +103,6 @@
   <h1 class="faq-h1">Frequently Asked Questions</h1>
 </section>
 
+<script src="js/slider.js"></script>
 </body>
 </html>
