fix bug in slide

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <!-- Begin Slider -->
 <section class="slider-container">
   <div class="slider">
+
     <div class="slider-item slide">
       <h1 class="slider-heading">2023 Consumer Confidence Reports</h1>
       <p class="slider-paragraph">
@@ -48,7 +49,7 @@
       <div class="slider-link-wrapper">
         <a class="btn-blue" href="#">Read the Reports</a>
       </div>
-    </div>
+    </div> <!-- END Slide -->
 
     <div class="slider-item slide">
       <h1 class="slider-heading">2024 Consumer Confidence Reports</h1>
@@ -60,15 +61,41 @@
       <div class="slider-link-wrapper">
         <a class="btn-blue" href="#">Read the Reports</a>
       </div>
-    </div>
-  </div>
+    </div> <!-- END slide -->
+
+    <div class="slider-item slide">
+      <h1 class="slider-heading">2025 Consumer Confidence Reports</h1>
+      <p class="slider-paragraph">
+        2024 Consumer Confidence Reports have been released and are available. These can be viewed on the News page. Or, you
+        can click on the link below.
+      </p>
+
+      <div class="slider-link-wrapper">
+        <a class="btn-blue" href="#">Read the Reports</a>
+      </div>
+    </div> <!-- END slide -->
+
+    <div class="slider-item slide">
+      <h1 class="slider-heading">Schedule Outage</h1>
+      <p class="slider-paragraph">
+        There will be an outage in Creekroad Subdivision today.
+      </p>
+
+      <div class="slider-link-wrapper">
+        <a class="btn-blue" href="#">Read the Reports</a>
+      </div>
+    </div> <!-- END slide -->
+
+  </div> <!-- END slider -->
 
   <div class="dots">
     <span class="dot" data-slide="0"></span>
     <span class="dot" data-slide="1"></span>
+    <span class="dot" data-slide="2"></span>
+    <span class="dot" data-slide="3"></span>
   </div>
-</section>
-<!-- End Slider -->
+
+</section> <!-- End Slider -->
 
 <!-- Online Bill Pay Call To Action -->
 <section class="billing-container">
@@ -102,6 +129,7 @@
 <section class="faq-container">
   <h1 class="faq-h1">Frequently Asked Questions</h1>
 </section>
+<!-- End FAQ -->
 
 <script src="js/slider.js"></script>
 </body>
