add faq to site

--- a/index.html
+++ b/index.html
@@ -128,9 +128,24 @@
 <!-- FAQ -->
 <section class="faq-container">
   <h1 class="faq-h1">Frequently Asked Questions</h1>
+  <div class="faq-item faq-open-question" data-faq-index="0">
+    <div class="faq-question">
+      <h1>What time is Consolidated Open?</h1>
+      <img class="faq-icon" src="img/minus.svg" alt="Toggle FAQ">
+    </div>
+    <p class="faq-answer">Consolidated is open 9 AM to 5 PM. We are not open on Fridays, Saturdays or Sundays. We are open for all major holidays except for the Fourth of July.</p>
+  </div>
+  <div class="faq-item faq-closed-question" data-faq-index="1">
+    <div class="faq-question">
+      <h1>What forms of payment do you accept?</h1>
+      <img class="faq-icon" src="img/plus.svg" alt="Toggle FAQ">
+    </div>
+    <p class="faq-answer">We accept Visa, Mastercard or Check. We do not accept cash anymore.</p>
+  </div>
 </section>
 <!-- End FAQ -->
 
 <script src="js/slider.js"></script>
+<script src="js/faq.js"></script>
 </body>
 </html>
