--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 <!-- FAQ -->
 <section class="faq-container">
   <h1 class="faq-h1">Frequently Asked Questions</h1>
-  <div class="faq-item faq-open-question" data-faq-index="0">
+  <div class="faq-item faq-closed-question" data-faq-index="0">
     <div class="faq-question">
       <h1>What time is Consolidated Open?</h1>
-      <img class="faq-icon" src="img/minus.svg" alt="Toggle FAQ">
+      <img class="faq-icon" src="img/plus.svg" alt="Toggle FAQ">
     </div>
     <p class="faq-answer">Consolidated is open 9 AM to 5 PM. We are not open on Fridays, Saturdays or Sundays. We are open for all major holidays except for the Fourth of July.</p>
   </div>
@@ -144,6 +144,10 @@
   </div>
 </section>
 <!-- End FAQ -->
+
+<footer class="footer-container">
+  <p>Copyright &copy; 2011 - 2024, Consolidated Utilities, Inc. All Rights Reserved</p>
+</footer>
 
 <script src="js/slider.js"></script>
 <script src="js/faq.js"></script>
