tenatively updated styles for responsive support

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
 <!-- Begin Main Navigation -->
 <nav class="main-nav">
+  <div class="mobile-nav-header">
+    <a href="index.html"><img class="cu-logo-menu" src="img/consolidated-logo-1.png" alt="Consolidated Utilities Logo"></a>
+    <button class="hamburger-menu" aria-label="Toggle navigation menu">
+      <span class="hamburger-line"></span>
+      <span class="hamburger-line"></span>
+      <span class="hamburger-line"></span>
+    </button>
+  </div>
+  <div class="menu-overlay"></div>
   <ul class="menu">
     <div class="main-nav-left">
       <li><a href="index.html"><img class="cu-logo-menu" src="img/consolidated-logo-1.png" alt="Consolidated Utilities Logo"></a></li>
@@ -151,5 +160,6 @@
 
 <script src="js/slider.js"></script>
 <script src="js/faq.js"></script>
+<script src="js/mobile-menu.js"></script>
 </body>
 </html>
